--- a/package.json
+++ b/package.json
@@ -6,14 +6,30 @@
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.1.1",
     "@testing-library/user-event": "^13.5.0",
+    "bootstrap": "5.1.3",
+    "bootstrap-icons": "1.7.1",
+    "node-sass": "6.0.1",
     "react": "^18.1.0",
+    "react-bootstrap": "2.0.2",
     "react-dom": "^18.1.0",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
+  "devDependencies": {
+    "eslint": "8.6.0",
+    "eslint-config-airbnb": "19.0.4",
+    "eslint-plugin-import": "2.25.4",
+    "eslint-plugin-jsx-a11y": "6.5.1",
+    "eslint-plugin-react": "7.28.0",
+    "eslint-plugin-react-hooks": "4.3.0",
+    "rimraf": "3.0.2",
+    "stylelint": "14.1.0",
+    "stylelint-config-standard-scss": "3.0.0"
+  },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
+    "lint": "npm run lint-eslint && npm run lint-stylelint",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
