--- a/package.json
+++ b/package.json
@@ -3,20 +3,28 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@testing-library/jest-dom": "^5.16.4",
-    "@testing-library/react": "^13.1.1",
-    "@testing-library/user-event": "^13.5.0",
     "bootstrap": "5.1.3",
     "bootstrap-icons": "1.7.1",
     "node-sass": "6.0.1",
-    "react": "^18.1.0",
-    "react-bootstrap": "2.0.2",
-    "react-dom": "^18.1.0",
+    "react": "17.0.2",
+    "react-bootstrap": "2.2.3",
+    "react-dom": "17.0.2",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
   "devDependencies": {
-    "eslint": "8.6.0",
+    "@testing-library/jest-dom": "5.16.4",
+    "@testing-library/react": "12.1.2",
+    "@testing-library/user-event": "13.5.0",
+    "@types/react": "17.0.36",
+    "@types/react-dom": "17.0.11",
+    "@types/react-redux": "7.1.23",
+    "@types/react-syntax-highlighter": "13.5.2",
+    "@typescript-eslint/eslint-plugin": "5.19.0",
+    "@typescript-eslint/parser": "5.19.0",
+    "@wojtekmaj/enzyme-adapter-react-17": "0.6.5",
+    "enzyme": "3.11.0",
+    "eslint": "8.13.0",
     "eslint-config-airbnb": "19.0.4",
     "eslint-plugin-import": "2.25.4",
     "eslint-plugin-jsx-a11y": "6.5.1",
@@ -24,7 +32,8 @@
     "eslint-plugin-react-hooks": "4.3.0",
     "rimraf": "3.0.2",
     "stylelint": "14.1.0",
-    "stylelint-config-standard-scss": "3.0.0"
+    "stylelint-config-standard-scss": "3.0.0",
+    "typescript": "4.6.3"
   },
   "scripts": {
     "start": "react-scripts start",
